[package]
name = "rust-proxy-rotator"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
bytes = "1.10.0"
futures = "0.3.31"
http-body-util = "0.1.2"
hyper = { version = "1.6.0", features = ["full"] }
hyper-rustls = "0.27.5"
hyper-tls = "0.6.0"
hyper-util = "0.1.10"
itertools = "0.14.0"
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["json", "cookies", "rustls-tls"] }
tokio = { version = "1.43.0", features = ["full"] }
